2016-07-03 Riccardo Mottola <rm@gnu.org>

	* AppController.h
        * AppController.m
        Mark progress methods as oneway.

2016-07-03 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Open local file in binary mode (needed on Windows)

2016-05-16 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Open files in binary mode (fixes on Windows), check more carefully for sent bytes.

2015-09-04 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Fix socktype for NetBSD.

2015-02-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* ftpclient.m
	* ftpclient.h
	Return success/failure in retrieveFile, add to the table only if it succeeds.

2015-02-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* ftpclient.m
	* ftpclient.h
	Return success/failure in storeFile, add to the table only if it succeeds.

2015-02-05 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Do not add element to the table if it is already there.

2015-02-02 Riccardo Mottola <rm@gnu.org>

	* fileTable.m (containsFileName)
	* fileTable.h
	Added method containsFileName to check if the current table stores a file with the same name

2014-05-27 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Make file size parsing more robust, checking for () with NSBackwardSearch.

2013-10-19 Riccardo Mottola <rm@gnu.org>

	* localclient.m
	* ftpclient.m
	Update file after renaming.

	* AppController.m
	Add created folder to remote directory listing.

2013-10-19 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Cleanup debug logs.

2013-10-19 Riccardo Mottola <rm@gnu.org>

	* fileElement.h
	* fileElement.m
	Path and name setters.

2013-07-28 Riccardo Mottola <rm@gnu.org>

	* fileTable.h
	* fileTable.m
	File path setter.

2013-07-27 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* fileTable.m
        Make copy of selection before file transfer. Update table after store and retrieve.

2013-07-14 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* Resources/FTP.gorm
	Remote/Local refresh